--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div class="logo">
                 <a href="index.html"><img src="image/logo2.png" alt="logo"></a>
                 <span>
-                    <h1>Shamim Ahmad</h1>
+                    <h1>Shamim Ahmad 
+
+                    </h1>
                 </span>
             </div>
             <div class="right">
